--- a/package.json
+++ b/package.json
@@ -95,6 +95,10 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.6.5",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "less": "^3.0.1",
     "less-loader": "^4.0.5"
   },
